--- a/00_grid-dices-A/css/style.css
+++ b/00_grid-dices-A/css/style.css
@@ -1,161 +1,102 @@
 body {
-    margin: 0;
-    height: 100vh;
-    background: #eee;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
-    font-size: 1.4rem;
-    color: rgba(0, 0, 0, .6);
+   margin:0;
+   padding: 0;
+   
 }
 
 .dice {
-    background: #fff;
-    border: 2px solid #222;
-    border-radius: .5rem;
-    margin: 1rem;
-    display: flex;
-    padding: 1rem;
-    box-sizing: border-box;
-    display: grid;
-    grid-template-columns: repeat(3, 1rem);
-    grid-template-rows: 1rem 1rem 1rem;
-    gap: .5rem;
+    border: 5px line black;
+    background-color: aqua;
+    ;
 }
 
 .dice.faded {
-    opacity: .2;
+  grid-template: 5fr /5fr;
+  border: 5px line black;
+
 }
 
 .dice aside {
-    background: #222;
-    border-radius: 99rem;
-    display: none;
+   
 }
 
 .dice.dots-1 aside:nth-child(1) {
-    display: block;
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
 }
 
 .dice.dots-2 aside:nth-child(1) {
-    display: block;
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+   
 }
 
 .dice.dots-2 aside:nth-child(2) {
-    display: block;
-    grid-column: 3 / 3;
-    grid-row: 3 / 3;
+    
 }
-
 .dice.dots-3 aside:nth-child(1) {
-    display: block;
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+    
 }
 
 .dice.dots-3 aside:nth-child(2) {
-    display: block;
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    
 }
 
 .dice.dots-3 aside:nth-child(3) {
-    display: block;
-    grid-column: 3 / 4;
-    grid-row: 3 / 4;
+    
 }
 
 .dice.dots-4 aside:nth-child(1) {
-    display: block;
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+    
 }
 
 .dice.dots-4 aside:nth-child(2) {
-    display: block;
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
+    
 }
 
 .dice.dots-4 aside:nth-child(3) {
-    display: block;
-    grid-column: 1 / 2;
-    grid-row: 3 / 4;
+    
 }
 
 .dice.dots-4 aside:nth-child(4) {
-    display: block;
-    grid-column: 3 / 4;
-    grid-row: 3 / 4;
+    
 }
 
 .dice.dots-5 aside:nth-child(1) {
-    display: block;
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+    
 }
 
 .dice.dots-5 aside:nth-child(2) {
-    display: block;
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
+    
 }
 
 .dice.dots-5 aside:nth-child(3) {
-    display: block;
-    grid-column: 2 / 3;
-    grid-row: 2 / 3;
+    
 }
-
 .dice.dots-5 aside:nth-child(4) {
-    display: block;
-    grid-column: 1 / 2;
-    grid-row: 3 / 4;
+    
 }
 
 .dice.dots-5 aside:nth-child(5) {
-    display: block;
-    grid-column: 3 / 4;
-    grid-row: 3 / 4;
+    
 }
 
 .dice.dots-6 aside:nth-child(1) {
-    display: block;
-    grid-column: 1 / 2;
-    grid-row: 1 / 2;
+   
 }
 
 .dice.dots-6 aside:nth-child(2) {
-    display: block;
-    grid-column: 3 / 4;
-    grid-row: 1 / 2;
+    
 }
 
 .dice.dots-6 aside:nth-child(3) {
-    display: block;
-    grid-column: 1 / 2;
-    grid-row: 2 / 3;
+    
 }
 
 .dice.dots-6 aside:nth-child(4) {
-    display: block;
-    grid-column: 3 / 4;
-    grid-row: 2 / 3;
+    
 }
 
 .dice.dots-6 aside:nth-child(5) {
-    display: block;
-    grid-column: 1 / 2;
-    grid-row: 3 / 4;
+    
 }
 
 .dice.dots-6 aside:nth-child(6) {
-    display: block;
-    grid-column: 3 / 4;
-    grid-row: 3 / 4;
+    
 }
